# over_simple_game_1

./: .gitignore  Cargo.toml  README.md
resources/civ/entities/: test_unit.ron
resources/sprites/: _load.ron
resources/tiles/: tile_types.ron  unknown.png.ron
src/: lib.rs  main.rs
src/core/: component.rs  mod.rs
src/core/engine/: io.rs  mod.rs
src/core/map/: coord.rs  generator.rs  mod.rs  tile.rs  tile_map.rs
src/core/structures/: mod.rs  typed_index_map.rs
src/game/: atlas.rs  cli.rs  components.rs  coords.rs  game_map.rs  mod.rs
src/game/components/: mod.rs
src/games/: mod.rs
src/games/civ/: mod.rs
src/games/civ/maps/: mod.rs
