[package]
name = "over_simple_game_1"
version = "0.1.0"
authors = ["OvermindDL1 <overminddl1@gmail.com>"]
edition = "2018"
description = "Little game for the purpose of learning `shipyard` in a full productionish setting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/ggez/ggez.git" }
shipyard = { git = "https://github.com/leudz/shipyard.git" }
anyhow = "1.0.31"
thiserror = "1.0.20"
