[package]
name = "over_simple_game_1"
version = "0.1.0"
authors = ["OvermindDL1 <overminddl1@gmail.com>"]
edition = "2018"
description = "Little game for the purpose of learning `shipyard` in a full productionish setting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/ggez/ggez.git" }
winit = { version = "0.19.3" } # Same version as ggez, keep in sync
shipyard = { git = "https://github.com/leudz/shipyard.git", features = ["std", "panic", "parallel", "serde", "non_send", "non_sync"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
log = "0.4"
log4rs = { version = "0.13", features = ["all_components", "gzip", "file", "background_rotation", "yaml_format"] }
guillotiere = "0.5"
indexmap = "1.5"
image = "0.22"
proptest = "0.10"
rand = "0.7"
noise = "0.6"
assert_approx_eq = "1.1"
